--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -3574,3 +3574,7 @@ filter: blur(40px);
     box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 0 18px rgba(255, 255, 255, 0.3);
     border: var(--cardborder);
   }
+
+  #loginpromptcard{
+    display: none;
+  }
