--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -3556,6 +3556,7 @@ filter: blur(40px);
     flex-direction: column;
     align-items: center;
     position: relative;
+    margin-right:17px;
   }
   .shareeventcard .share-pfp-stack {
     display: flex;
