--- a/mcacountdown/betastyle.css
+++ b/mcacountdown/betastyle.css
@@ -3656,4 +3656,26 @@ filter: blur(40px);
     align-items: center;
     position: relative;
   }
+
+.share-pfp-container .share-pfp::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 50%;
+  background: linear-gradient(to bottom right, rgba(255,255,255,0.05), transparent);
+  pointer-events: none;
+  mix-blend-mode: screen;
+  z-index:10000000;
+}
+
+.share-pfp-container .share-pfp::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 50%;
+  pointer-events: none;
+  z-index: 1000000;
+  box-shadow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 0 18px rgba(255, 255, 255, 0.3);
+  border: 1px solid rgba(0, 0, 0, 0.1);;
+}
   
